--- a/.gitignore
+++ b/.gitignore
@@ -15,10 +15,17 @@ pnpm-debug.log*
 
 # environment variables
 .env
+.env.local
 .env.production
 
 # macOS-specific files
 .DS_Store
 
-# jetbrains setting folder
-.idea/
+# packages
+pnpm-lock.yaml
+package-lock.json
+yarn.lock
+
+# .vs folder
+.vs/
+.idea
