--- a/package.json
+++ b/package.json
@@ -7,9 +7,15 @@
     "start": "astro dev",
     "build": "astro check && astro build",
     "preview": "astro preview",
-    "astro": "astro"
+    "astro": "astro",
+    "check": "astro check && tsc --noEmit",
+    "lint": "eslint --ext .astro,.ts,.js,.tsx .",
+    "lint:fix": "eslint --ext .astro,.ts,.js,.tsx . --fix",
+    "format": "prettier --write src",
+    "format:check": "prettier --check src"
   },
   "dependencies": {
+    "@radix-ui/react-slot": "^1.1.0",
     "astro": "^4.12.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -19,6 +25,7 @@
     "tailwind-merge": "^2.4.0"
   },
   "devDependencies": {
+    "@antfu/eslint-config": "0.43.1",
     "@astrojs/check": "^0.8.3",
     "@astrojs/mdx": "^3.1.3",
     "@astrojs/react": "^3.6.0",
@@ -27,6 +34,12 @@
     "@astrojs/tailwind": "^5.1.0",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@typescript-eslint/eslint-plugin": "^7.17.0",
+    "@typescript-eslint/parser": "7.15.0",
+    "eslint": "8.57.0",
+    "eslint-config-prettier": "9.1.0",
+    "eslint-plugin-astro": "1.2.2",
+    "eslint-plugin-jsx-a11y": "6.9.0",
     "prettier": "^3.3.3",
     "prettier-plugin-astro": "^0.14.1",
     "prettier-plugin-astro-organize-imports": "^0.4.9",
