--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "format:check": "prettier --check src"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.1.1",
+    "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "astro": "^4.12.2",
     "class-variance-authority": "^0.7.0",
