--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
     "astro": "^4.12.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "embla-carousel-autoplay": "^8.1.8",
+    "embla-carousel-fade": "^8.1.8",
+    "embla-carousel-react": "^8.1.8",
     "lucide-react": "^0.416.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
