--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "embla-carousel-autoplay": "^8.1.8",
     "embla-carousel-fade": "^8.1.8",
     "embla-carousel-react": "^8.1.8",
+    "framer-motion": "^11.3.21",
     "lucide-react": "^0.416.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
